	Fixed: 'subwindows can be hidden by main window' (except for the sort
	window, this is intended behavior and not a bug)
	Fixed: 'assertion failed when clicking "remove" buttons'
	Fixed: 'assertion `g_path_is_absolute (filename)' failed'
	Fixed: 'signal `file_set' is invalid for instance `0x85d1160''
	
  * src/fileselection.c:
  
    Use the stock GTK directory selection dialog. Code cleanup.

2008-01-01 Matvey Kozhev <sikon at users.sourceforge.net>

  * src/misc_input.c:
  * src/misc.h:
  * src/misc_playlist.c:
  * src/display_photo.c:
  * data/gtkpod.glade:
  
    Refactored get_user_string (input box) to use glade, as well
	as for HIG compliance.
	
  * configure.in:
  * src/help.c:
  
    Display libgpod version in the about dialog.
	
  * data/icons/Makefile.am:
  
    Removed data/icons/gtkpod.xpm.
	
  * src/misc.h:
  * src/misc_confirm.c:
  
    Simpler warning functions for cases when a single dialog box is enough
	(gtkpod_warning_simple, a drop-in replacement for gtkpod-warning, and
	gtkpod_warning_hig).
	
  * src/info.c:
  * src/info.h:
  * data/gtkpod.glade:
  
	Removed the old info window. (There is still some now-unused code left.)
	Exported some info gathering functions for infodlg.c.
	
  * src/infodlg.c:
  * src/infodlg.h:
  * src/display.c:
  * src/tools.c:
  
    Use the new info dialog.

2007-12-31 Matvey Kozhev <sikon at users.sourceforge.net>

  * data/icons/*/gtkpod.png:
  * data/icons/gtkpod.xpm:
  * data/gtkpod-*.png:
  
    New Tango-style application icon.
	
  * src/info.c:
  * src/info.h:
  
    Support for hooks in info_update_*. Will be needed by the new info_dialog.
	
  * src/repository.c:
  * data/gtkpod.glade:
  
    Redesigned the repository manager dialog.
	The behavior of the Delete button is now much more intuitive
	(thanks to godog for pointing this out).

  * src/prefs_window.c:
  
    Hopefully fixed the Dreaded Sort Window Crash once and for all.
	(Although it would still be better if all developers migrated to glade 3 ;))
